unpackaged/main/default/objects/Gearset_employee__c/Gearset_employee__c.object-meta.xml
<CustomObject>
    <label>GearsetEmployee</label>
    <nameField>
        <label>Gearset_employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GearsetEmployees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>