unpackaged/main/default/objects/Gearset_employee__c/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <label>Test</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>