unpackaged/main/default/objects/Gearset_employee__c/recordTypes/Commute.recordType-meta.xml
<RecordType>
    <fullName>Commute</fullName>
    <active>true</active>
    <label>Commute</label>
</RecordType>